--- a/src/freebsd-server.html
+++ b/src/freebsd-server.html
@@ -440,7 +440,7 @@
 
                                 <p>First, make sure your FreeBSD system is <b>configured for latest packages</b>.</p>
                                 <div><b>Install dependencies:</b></div>
-                                <div><code>sudo pkg install libass fontconfig freetype2 fribidi gnutls iconv opus sqlite3 libtheora libva ocl-icd libvorbis webp libzvbi libraw ImageMagick6 tesseract intel-media-sdk libunwind libinotify openssl icu krb5 libexif libjxl libheif libimagequant openexr openjpeg orc pango tiff</code></div>
+                                <div><code>sudo pkg install libass fontconfig freetype2 mbedtls fribidi gnutls iconv opus sqlite3 libtheora libva ocl-icd libvorbis webp libzvbi libraw ImageMagick6 tesseract intel-media-sdk libunwind libinotify openssl icu krb5 libexif libjxl libheif libimagequant openexr openjpeg orc pango tiff</code></div>
 
                                 <br />
                                 <div>
