--- a/src/support.html
+++ b/src/support.html
@@ -384,7 +384,7 @@
                             <li id="menu-item-5028" class="menu-item menu-item-type-post_type menu-item-object-page w-nav-item level_1 menu-item-5028"><a class="w-nav-anchor level_1" href="download.html"><span class="w-nav-title">DOWNLOAD</span><span class="w-nav-arrow"></span><span class="ripple-container"></span></a></li>
                             <li id="menu-item-6279" class="menu-item menu-item-type-post_type menu-item-object-page w-nav-item level_1 menu-item-6279"><a class="w-nav-anchor level_1" href="premiere.html"><span class="w-nav-title">EMBY PREMIERE</span><span class="w-nav-arrow"></span><span class="ripple-container"></span></a></li>
                             <li id="menu-item-6320" class="menu-item menu-item-type-custom menu-item-object-custom w-nav-item level_1 menu-item-6320"><a class="w-nav-anchor level_1" target="_blank" href="http://app.emby.media"><span class="w-nav-title">SIGN IN</span><span class="w-nav-arrow"></span><span class="ripple-container"></span></a></li>
-                            <li id="menu-item-5005" class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-4975 current_page_item w-nav-item level_1 menu-item-5005"><a class="w-nav-anchor level_1" href="https://support.emby.media"><span class="w-nav-title">SUPPORT</span><span class="w-nav-arrow"></span><span class="ripple-container"></span></a></li>
+                            <li id="menu-item-5005" class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-4975 current_page_item w-nav-item level_1 menu-item-5005"><a class="w-nav-anchor level_1" href="https://emby.media/support/index.html"><span class="w-nav-title">SUPPORT</span><span class="w-nav-arrow"></span><span class="ripple-container"></span></a></li>
                         </ul>
                     </nav><!-- /NAV -->
 
@@ -423,7 +423,7 @@
                             </div> <!-- aio-icon-component -->
                         </div><div class="one-quarter">
                             <div class="aio-icon-component   style_2">
-                                <a class="aio-icon-box-link" href="https://support.emby.media" target=" _blank">
+                                <a class="aio-icon-box-link" href="https://emby.media/support/index.html" target=" _blank">
                                     <div class="aio-icon-box top-icon" style="">
                                         <div class="aio-icon-top">
                                             <div class="ult-just-icon-wrapper ">
