--- a/src/emby-for-android.html
+++ b/src/emby-for-android.html
@@ -424,6 +424,12 @@
                                         <a href="https://github.com/MediaBrowser/Emby.Releases/raw/master/android/emby-android-google-armeabi-v7a-release.apk">arm7</a>
                                     </div>
                                     <div>
+                                        <a href="https://github.com/MediaBrowser/Emby.Releases/raw/master/android/emby-android-google-x86_64-release.apk">x64</a>
+                                    </div>
+                                    <div>
+                                        <a href="https://github.com/MediaBrowser/Emby.Releases/raw/master/android/emby-android-google-arm64-v8a-release.apk">arm64</a>
+                                    </div>
+                                    <div>
                                         <a href="https://github.com/MediaBrowser/Emby.Releases/raw/master/android/emby-android-google-x86-release.apk">x86</a>
                                     </div>
                                     <br />
