--- a/src/alexalogin.html
+++ b/src/alexalogin.html
@@ -400,7 +400,7 @@
             <div class="l-submain for_pagehead color_alternate size_large" style="padding-top: 140px;">
                 <div class="l-submain-h g-html i-cf">
                     <div class="w-pagehead">
-                        <h1>Alexa Setup</h1>
+                        <h1>Emby Setup</h1>
                     </div>
                     <div class="upb_no_bg" data-fadeout="" data-fadeout-percentage="" data-parallax-content="" data-parallax-content-sense="" data-row-effect-mobile-disable="true" data-img-parallax-mobile-disable="true" data-rtl="false" data-custom-vc-row="" data-vc="4.5.2" data-theme-support=""></div>
                     <div class="g-cols wpb_row offset_wide">
@@ -408,7 +408,7 @@
                             <div class="wpb_text_column ">
                                 <div class="wpb_wrapper">
 
-                                    <p style="text-align: center; margin-top: 2em">The Emby Alexa skill talks to your server via an account linked through Emby Connect.  To learn how to setup one of your Emby users with Connect, please see <a href="https://github.com/MediaBrowser/Wiki/wiki/Emby%20Connect#guide-for-administrators">Emby Connect for Administrators</a>.  Once you have configured the user you wish Alexa to use, then enter those Emby Connect credentials below.</p>
+                                    <p style="text-align: center; margin-top: 2em">The Emby skill talks to your server via an account linked through Emby Connect. To learn how to setup one of your Emby users with Connect, please see <a href="https://emby.media/support/articles/Emby-Connect">Emby Connect for Administrators</a>.</p>
                                     <p></p>
                                 </div>
                             </div>
@@ -427,7 +427,7 @@
                                             <form id="confirmForm" style="margin: 0 auto; width: 100%; max-width: 400px;">
                                                 <label style="text-align: left; display: block;margin-bottom:2em;">
 
-                                                    <div>Emby Connect username or email:</div>
+                                                    <div>Emby Connect email:</div>
                                                     <input id="username" style="width: 100%;" type="text" class="not-empty" required>
 
                                                 </label>
@@ -447,7 +447,7 @@
 
                                                 <label style="text-align: left; display: block;">
 
-                                                    <div>Server to control with Alexa:</div>
+                                                    <div>Server to control:</div>
                                                     <select style="width: 100%;" id="selectServer" required></select>
 
                                                 </label>
@@ -457,7 +457,7 @@
                                                 <div style="color:#444;margin-top:1.5em;margin-bottom:2em;">Server not listed? Set your server up with Emby Connect.</div>
 
                                                 <p>
-                                                    <button class="g-btn color_primary type_raised size_big" type="submit" style="display: block; margin-top: 30px; width: 100%;">Link to Alexa<span class="ripple-container"></span></button><br>
+                                                    <button class="g-btn color_primary type_raised size_big" type="submit" style="display: block; margin-top: 30px; width: 100%;">Connect<span class="ripple-container"></span></button><br>
                                                 </p>
                                             </form>
                                             <script src="resources/jquery-2.1.3.min.js"></script><br>
