--- a/src/googlehomelogin.html
+++ b/src/googlehomelogin.html
@@ -455,7 +455,7 @@
                                                 </p>
                                             </form>
                                             <script src="resources/jquery-2.1.3.min.js"></script><br>
-                                            <script type="text/javascript" src="resources/alexalogin.js"></script>
+                                            <script type="text/javascript" src="resources/googlelogin.js"></script>
                                         </div>
                                     </div>
                                 </div>
