--- a/src/socialicons.html
+++ b/src/socialicons.html
@@ -1,35 +1,35 @@
 <div class="w-socials">
     <div class="w-socials-list">
         <div class="w-socials-item facebook">
-            <a class="w-socials-item-link" target="_blank" href="https://facebook.com/embyapp"></a>
+            <a class="w-socials-item-link" rel="noopener noreferrer" target="_blank" href="https://facebook.com/embyapp"></a>
             <div class="w-socials-item-popup">
                 <span>Facebook</span>
             </div>
         </div><div class="w-socials-item twitter">
-            <a class="w-socials-item-link" target="_blank" href="https://twitter.com/embyapp"></a>
+            <a class="w-socials-item-link" rel="noopener noreferrer" target="_blank" href="https://twitter.com/embyapp"></a>
             <div class="w-socials-item-popup">
                 <span>Twitter</span>
             </div>
         </div>
         <div class="w-socials-item pinterest">
-            <a class="w-socials-item-link" target="_blank" href="https://www.pinterest.com/emby0240/emby-news/"></a>
+            <a class="w-socials-item-link" rel="noopener noreferrer" target="_blank" href="https://www.pinterest.com/emby0240/emby-news/"></a>
             <div class="w-socials-item-popup">
                 <span>Pinterest</span>
             </div>
         </div>
         <div class="w-socials-item tumblr">
-            <a class="w-socials-item-link" target="_blank" href="https://embyapp.tumblr.com/"></a>
+            <a class="w-socials-item-link" rel="noopener noreferrer" target="_blank" href="https://embyapp.tumblr.com/"></a>
             <div class="w-socials-item-popup">
                 <span>Tumblr</span>
             </div>
         </div>
         <div class="w-socials-item github">
-            <a class="w-socials-item-link" target="_blank" href="https://github.com/MediaBrowser"></a>
+            <a class="w-socials-item-link" rel="noopener noreferrer" target="_blank" href="https://github.com/MediaBrowser"></a>
             <div class="w-socials-item-popup">
                 <span>GitHub</span>
             </div>
         </div><div class="w-socials-item rss">
-            <a class="w-socials-item-link" target="_blank" href="blog.xml"></a>
+            <a class="w-socials-item-link" rel="noopener noreferrer" target="_blank" href="blog.xml"></a>
             <div class="w-socials-item-popup">
                 <span>RSS</span>
             </div>
