Replace old 'wiki' references

--- a/src/docker-server.html
+++ b/src/docker-server.html
@@ -437,7 +437,7 @@
                                     <h4>Resources</h4>
                                     <span class="wpb_button align_left"><a href="community/index.php?/topic/9754-docker-setup" target="_blank" class="g-btn color_primary type_raised"><i class="fa fa-users"></i><span>Community</span><span class="ripple-container"></span></a></span>
                                     <div>
-                                        <span class="wpb_button align_left"><a href="https://github.com/MediaBrowser/Wiki/wiki/Docker-Getting-Started" target="_blank" class="g-btn color_primary type_raised"><i class="fa fa-book"></i><span>Wiki</span><span class="ripple-container"></span></a></span>
+                                        <span class="wpb_button align_left"><a href="https://emby.media/support/articles/Linux.html" target="_blank" class="g-btn color_primary type_raised"><i class="fa fa-book"></i><span>Knowledge Base</span><span class="ripple-container"></span></a></span>
                                     </div>
                                 </div>
                             </div>
