--- a/src/emby-for-appletv.html
+++ b/src/emby-for-appletv.html
@@ -471,7 +471,7 @@ sted Image' />
                                     <h3>Download</h3>
                                     <p>Emby for Apple TV is available in the tvOS app store.</p>
                                     <div>
-                                        <span class="wpb_button align_left"><a href="https://github.com/MediaBrowser/Wiki/wiki/Apple%20TV" target="_blank" class="g-btn color_primary type_raised"><i class="fa fa-info-circle"></i><span>Wiki</span><span class="ripple-container"></span></a></span>
+                                        <span class="wpb_button align_left"><a href="https://emby.media/support/articles/Apple-TV.html" target="_blank" class="g-btn color_primary type_raised"><i class="fa fa-info-circle"></i><span>Knowledge Base</span><span class="ripple-container"></span></a></span>
                                     </div>
                                     <div>
                                         <span class="wpb_button align_left"><a href="community/index.php?/forum/162-tvos-apple-tv" target="_blank" class="g-btn color_primary type_raised"><i class="fa fa-info-circle"></i><span>Community</span><span class="ripple-container"></span></a></span>
