--- a/src/emby-for-chromecast.html
+++ b/src/emby-for-chromecast.html
@@ -443,7 +443,7 @@
                                     <h2>How it Works</h2>
                                     <p>Chromecast support is included in the Emby Web Client, Emby for Android, and Emby for iOS, allowing you to easily cast media from the app to any Chromecast device.</p>
                                     <p>
-                                        <a href="https://github.com/MediaBrowser/Wiki/wiki/Chromecast" target="_blank">Emby for Chromecast Wiki</a>
+                                        <a href="https://emby.media/support/articles/Chromecast.html" target="_blank">Emby for Chromecast KB</a>
                                     </p>
 
                                 </div>
