--- a/src/freebsd-server.html
+++ b/src/freebsd-server.html
@@ -423,7 +423,7 @@
                                     <h2 style="margin:0;">Installation</h2>
                                     <div style="margin-left:2em;font-size:88%;">
                                         <span class="wpb_button align_left"><a style="font-size:inherit;padding:.8em 1.25em;" href="community/index.php?/forum/122-freebsd" target="_blank" class="g-btn color_primary type_raised"><i class="fa fa-users"></i><span>Community</span><span class="ripple-container"></span></a></span>
-                                        <span class="wpb_button align_left"><a style="font-size:inherit;padding:.8em 1.25em;" href="https://github.com/MediaBrowser/Wiki/wiki" target="_blank" class="g-btn color_primary type_raised"><i class="fa fa-book"></i><span>Wiki</span><span class="ripple-container"></span></a></span>
+                                        <span class="wpb_button align_left"><a style="font-size:inherit;padding:.8em 1.25em;" href="https://emby.media/support/articles/Home.html" target="_blank" class="g-btn color_primary type_raised"><i class="fa fa-book"></i><span>Knowledge Base</span><span class="ripple-container"></span></a></span>
                                     </div>
                                 </div>
 
