--- a/src/googlehomelogin.html
+++ b/src/googlehomelogin.html
@@ -405,7 +405,7 @@
                             <div class="wpb_text_column ">
                                 <div class="wpb_wrapper">
 
-                                    <p style="text-align: center; margin-top: 2em">Emby for Google Home talks to your server via an account linked through Emby Connect.  To learn how to setup one of your Emby users with Connect, please see <a href="https://github.com/MediaBrowser/Wiki/wiki/Emby%20Connect#guide-for-administrators">Emby Connect for Administrators</a>.  Once you have configured the user you wish Google Home to use, then enter those Emby Connect credentials below.</p>
+                                    <p style="text-align: center; margin-top: 2em">Emby for Google Home talks to your server via an account linked through Emby Connect.  To learn how to setup one of your Emby users with Connect, please see <a href="https://emby.media/support/articles/Emby-Connect.html">Emby Connect for Administrators</a>.  Once you have configured the user you wish Google Home to use, then enter those Emby Connect credentials below.</p>
                                     <p></p>
                                 </div>
                             </div>
