--- a/src/mac-server.html
+++ b/src/mac-server.html
@@ -463,7 +463,7 @@
                                     <h4>Resources</h4>
                                     <span class="wpb_button align_left"><a href="community/index.php?/forum/117-osx" target="_blank" class="g-btn color_primary type_raised"><i class="fa fa-users"></i><span>Community</span><span class="ripple-container"></span></a></span>
                                     <div>
-                                        <span class="wpb_button align_left"><a href="https://github.com/MediaBrowser/Wiki/wiki" target="_blank" class="g-btn color_primary type_raised"><i class="fa fa-book"></i><span>Wiki</span><span class="ripple-container"></span></a></span>
+                                        <span class="wpb_button align_left"><a href="https://emby.media/support/articles/Home.html" target="_blank" class="g-btn color_primary type_raised"><i class="fa fa-book"></i><span>Knowledge Base</span><span class="ripple-container"></span></a></span>
                                     </div>
                                 </div>
                             </div>
