--- a/src/premieresamsung.html
+++ b/src/premieresamsung.html
@@ -800,7 +800,7 @@
                             <div class="wpb_text_column ">
                                 <div class="wpb_wrapper">
 
-                                    <p style="text-align: center;">Some apps have the option to unlock basic playback individually.  For a complete list of the features provided with Premiere vs. these unlocks, please see the <a href="https://github.com/MediaBrowser/Wiki/wiki/Emby-Premiere-Feature-Matrix">Feature Matrix</a>.</p>
+                                    <p style="text-align: center;">Some apps have the option to unlock basic playback individually.  For a complete list of the features provided with Premiere vs. these unlocks, please see the <a href="https://emby.media/support/articles/Premiere-Feature-Matrix.html">Feature Matrix</a>.</p>
                                     <p></p>
                                 </div>
                             </div>
