--- a/src/emby-for-android.html
+++ b/src/emby-for-android.html
@@ -434,7 +434,7 @@
                                     </div>
                                     <br />
                                     <div>
-                                        <span class="wpb_button align_left"><a href="https://github.com/MediaBrowser/Wiki/wiki/Android%20Mobile" target="_blank" class="g-btn color_primary type_raised"><i class="fa fa-info-circle"></i><span>Wiki</span><span class="ripple-container"></span></a></span>
+                                        <span class="wpb_button align_left"><a href="https://emby.media/support/articles/Android-Mobile.html" target="_blank" class="g-btn color_primary type_raised"><i class="fa fa-info-circle"></i><span>Knowledge Base</span><span class="ripple-container"></span></a></span>
                                     </div>
                                     <div>
                                         <span class="wpb_button align_left"><a href="community/index.php?/forum/93-android-mobile/" target="_blank" class="g-btn color_primary type_raised"><i class="fa fa-info-circle"></i><span>Community</span><span class="ripple-container"></span></a></span>
