--- a/src/emby-for-ios.html
+++ b/src/emby-for-ios.html
@@ -427,7 +427,7 @@
                                         <a href="https://itunes.apple.com/us/app/emby/id992180193?ls=1&amp;mt=8" target="_blank"><img class="alignnone size-medium wp-image-5449" src="resources/appleappstore.png" alt="iTunes" style="max-height:54px;"></a>
                                     </p>
                                     <div>
-                                        <span class="wpb_button align_left"><a href="https://github.com/MediaBrowser/Wiki/wiki/iOS" target="_blank" class="g-btn color_primary type_raised"><i class="fa fa-info-circle"></i><span>Wiki</span><span class="ripple-container"></span></a></span>
+                                        <span class="wpb_button align_left"><a href="https://emby.media/support/articles/iOS.html" target="_blank" class="g-btn color_primary type_raised"><i class="fa fa-info-circle"></i><span>Knowledge Base</span><span class="ripple-container"></span></a></span>
                                     </div>
                                     <div>
                                         <span class="wpb_button align_left"><a href="community/index.php?/forum/94-ios/" target="_blank" class="g-btn color_primary type_raised"><i class="fa fa-info-circle"></i><span>Community</span><span class="ripple-container"></span></a></span>
