--- a/src/emby-for-kodi.html
+++ b/src/emby-for-kodi.html
@@ -423,7 +423,7 @@
                                     <p>For more information, including a YouTube demonstration, visit the <a href="community/index.php?/topic/78547-embycon-kodi-add-on" target="_blank">Emby community.</a></p>
                                     <h2>Or Use the Emby for Kodi Sync Add-On</h2>
                                     <p>The Emby for Kodi sync add-on has a richer feature set than EmbyCon, but requires a periodic syncing process to download data from your Emby Server. This syncing process can take a little while and may result in increased CPU and memory consumption on your Emby Server.</p>
-                                    <p>Installation instructions can be found on our <a target="_blank" href="community/index.php?/topic/21888-emby-for-kodi">Emby for Kodi wiki.</a></p>
+                                    <p>Installation instructions can be found on our <a target="_blank" href="community/index.php?/topic/21888-emby-for-kodi">Emby for Kodi Forum.</a></p>
 
                                 </div>
                             </div>
