--- a/src/emby-for-nvidiashield.html
+++ b/src/emby-for-nvidiashield.html
@@ -438,7 +438,7 @@
                                     <div><a href="https://github.com/MediaBrowser/Emby.Releases/raw/master/androidtv/app-google-release.apk">Download the apk</a></div>
 
                                     <br />							<div>
-                                        <span class="wpb_button align_left"><a href="https://github.com/MediaBrowser/Wiki/wiki/Android%20TV" target="_blank" class="g-btn color_primary type_raised"><i class="fa fa-info-circle"></i><span>Wiki</span><span class="ripple-container"></span></a></span>
+                                        <span class="wpb_button align_left"><a href="https://emby.media/support/articles/Android-TV.html" target="_blank" class="g-btn color_primary type_raised"><i class="fa fa-info-circle"></i><span>Knowledge Base</span><span class="ripple-container"></span></a></span>
                                     </div>
                                     <div>
                                         <span class="wpb_button align_left"><a href="community/index.php?/forum/147-android-tv-fire-tv" target="_blank" class="g-btn color_primary type_raised"><i class="fa fa-info-circle"></i><span>Community</span><span class="ripple-container"></span></a></span>
