--- a/src/premiere-ext.html
+++ b/src/premiere-ext.html
@@ -480,7 +480,7 @@
                     <div class="w-pagehead">
                         <h1>Emby Premiere</h1>
                         <p>Extended Premiere Options</p>
-                        <p style="font-weight: bold">Emby is NOT a media streaming service.  We provide no content.  Emby is a Personal Media Server platform.  <span style="color:red">You must have your own server installed and your own content (or Live TV tuner).</span> Please only purchase one of the items below if you have your own Emby Server already installed.</p>
+                        <p style="font-weight: bold">Emby is NOT a media streaming service.  We provide no content.  Emby is a Personal Media Server platform.  <span style="color:red">You must have your own server installed and your own content (or Live TV tuner).</span> Please DO NOT purchase one of these items unless you are using your own server that you installed.</p>
                     </div>
                 </div>
             </div>
@@ -523,10 +523,10 @@
                                         <div class="vc_wp_text wpb_content_element">
                                             <div class="widget widget_text">
                                                 <div class="textwidget">
+                                                    <button class="stripeButton" onclick="stripeCheckout('premiere.45.monthly', 'subscription')">Pay with card / Other</button>
                                                     <p>
                                                         <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=WTKCHAMPM6TTW"><img src="resources/checkout-logo-medium.png" alt="Check out with PayPal"></a>
                                                     </p>
-                                                    <button class="stripeButton" onclick="stripeCheckout('premiere.45.monthly', 'subscription')">Pay with card / Other</button>
                                                 </div>
                                             </div>
                                         </div>
@@ -554,10 +554,10 @@
                                         <div class="vc_wp_text wpb_content_element">
                                             <div class="widget widget_text">
                                                 <div class="textwidget">
+                                                    <button class="stripeButton" onclick="stripeCheckout('premiere.75.monthly', 'subscription')">Pay with card / Other</button>
                                                     <p>
                                                         <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=EE6XAJNSGWSJL"><img src="resources/checkout-logo-medium.png" alt="Check out with PayPal"></a>
                                                     </p>
-                                                    <button class="stripeButton" onclick="stripeCheckout('premiere.75.monthly', 'subscription')">Pay with card / Other</button>
                                                 </div>
                                             </div>
                                         </div>
@@ -576,123 +576,6 @@
                                     <i class="fa fa-"></i>
                                 </span>
                             </div>
-                        </div>
-                    </div>
-
-                    <!-- Row Backgrounds -->
-                    <div class="upb_no_bg" data-fadeout="" data-fadeout-percentage="" data-parallax-content="" data-parallax-content-sense="" data-row-effect-mobile-disable="true" data-img-parallax-mobile-disable="true" data-rtl="false" data-custom-vc-row="" data-vc="4.5.2" data-theme-support=""></div>
-                    <div class="g-cols wpb_row offset_wide">
-                        <div class="full-width">
-                            <div class="wpb_text_column ">
-                                <div class="wpb_wrapper">
-
-                                    <h1 style="text-align: center;">Upgrades for EXISTING keys</h1>
-                                    <h2 style="text-align: center;color: red">These options are only valid with an existing Emby Premiere Lifetime or Yearly key on the same email address you use here</h2>
-                                    <p style="text-align: center;">
-                                        <input type="checkbox" onclick="togglePaymentButtons(this)">
-                                        <label for="togglePaymentButtons">I understand - show the payment options (refunds will incur fees)</label>
-                                    </p>
-                                    <p></p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <!-- Row Backgrounds -->
-                    <div class="upb_no_bg" data-fadeout="" data-fadeout-percentage="" data-parallax-content="" data-parallax-content-sense="" data-row-effect-mobile-disable="true" data-img-parallax-mobile-disable="true" data-rtl="false" data-custom-vc-row="" data-vc="4.5.2" data-theme-support=""></div>
-                    <div class="g-cols wpb_row offset_wide">
-                        <div class="one-third">
-                            <div class="aio-icon-component   style_2">
-                                <div class="aio-icon-box top-icon" style="">
-                                    <div class="aio-icon-top">
-                                        <div class="ult-just-icon-wrapper ">
-                                            <div class="aio-icon none " data-animation="fadeIn" data-animation-delay="03" style="color: #333333; font-size: 100px; display: inline-block;">
-                                                <i class="Defaults-heart"></i>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="aio-icon-header">
-                                        <h3 class="aio-icon-title" style="">45 Devices Monthly</h3>
-                                    </div> <!-- header -->
-                                    <div class="aio-icon-description" style="">
-                                        <p>
-                                            $5.99/Each Month (recurring)<br>
-                                        </p>
-                                        <div id="payment1" style="display: none;" class="vc_wp_text wpb_content_element">
-                                            <div class="widget widget_text">
-                                                <div class="textwidget">
-                                                    <p>
-                                                        <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=4JHC8VWBP4XSQ"><img src="resources/checkout-logo-medium.png" alt="Check out with PayPal"></a>
-                                                    </p>
-                                                    <button class="stripeButton" onclick="stripeCheckout('premiere.45.monthly.addon', 'subscription')">Pay with card / Other</button>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div> <!-- description -->
-                                </div> <!-- aio-icon-box -->
-                            </div> <!-- aio-icon-component -->
-                        </div>
-                        <div class="one-third">
-                            <div class="aio-icon-component   style_2">
-                                <div class="aio-icon-box top-icon" style="">
-                                    <div class="aio-icon-top">
-                                        <div class="ult-just-icon-wrapper ">
-                                            <div class="aio-icon none " data-animation="fadeIn" data-animation-delay="03" style="color: #333333; font-size: 100px; display: inline-block;">
-                                                <i class="Defaults-heart"></i>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="aio-icon-header">
-                                        <h3 class="aio-icon-title" style="">45 Devices Lifetime</h3>
-                                    </div> <!-- header -->
-                                    <div class="aio-icon-description" style="">
-                                        <p>
-                                            $99/One Time<br>
-                                        </p>
-                                        <div id="payment2" style="display: none;" class="vc_wp_text wpb_content_element">
-                                            <div class="widget widget_text">
-                                                <div class="textwidget">
-                                                    <p>
-                                                        <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=D3ZZWX7758UQG"><img src="resources/checkout-logo-medium.png" alt="Check out with PayPal"></a>
-                                                    </p>
-                                                    <button class="stripeButton" onclick="stripeCheckout('price_1JjTmfBCVt2QGDKH2PSZMMF7', 'payment')">Pay with card / Other</button>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div> <!-- description -->
-                                </div> <!-- aio-icon-box -->
-                            </div> <!-- aio-icon-component -->
-                        </div>
-                        <div class="one-third">
-                            <div class="aio-icon-component   style_2">
-                                <div class="aio-icon-box top-icon" style="">
-                                    <div class="aio-icon-top">
-                                        <div class="ult-just-icon-wrapper ">
-                                            <div class="aio-icon none " data-animation="fadeIn" data-animation-delay="03" style="color: #333333; font-size: 100px; display: inline-block;">
-                                                <i class="Defaults-heart"></i>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="aio-icon-header">
-                                        <h3 class="aio-icon-title" style="">75 Devices Monthly</h3>
-                                    </div> <!-- header -->
-                                    <div class="aio-icon-description" style="">
-                                        <p>
-                                            $11.99/Each Month (recurring)<br>
-                                        </p>
-                                        <div id="payment3" style="display: none;" class="vc_wp_text wpb_content_element">
-                                            <div class="widget widget_text">
-                                                <div class="textwidget">
-                                                    <p>
-                                                        <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=8ZVXTCUPWYJJQ"><img src="resources/checkout-logo-medium.png" alt="Check out with PayPal"></a>
-                                                    </p>
-                                                    <button class="stripeButton" onclick="stripeCheckout('premiere.75.monthly.addon', 'subscription')">Pay with card / Other</button>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div> <!-- description -->
-                                </div> <!-- aio-icon-box -->
-                            </div> <!-- aio-icon-component -->
                         </div>
                     </div>
 
