--- a/src/premiere.html
+++ b/src/premiere.html
@@ -459,7 +459,7 @@
                     <div class="w-pagehead">
                         <h1>Emby Premiere</h1>
                         <p>Enjoy additional features to enhance your personal media experience.</p>
-                        <p style="font-weight: bold">Emby is NOT a media streaming service.  We provide no content.  Emby is a Personal Media Server platform.  <span style="color:red">You must have your own server installed and your own media (or Live TV tuner).</span> Please DO NOT purchase one of these items unless you are using your own server that you installed.</p>
+                        <p style="font-weight: bold">Emby is NOT a media streaming service.  We provide no content.  Emby is a Personal Media Server platform.  You must have your own server installed and your own media (or Live TV tuner).<span style="color:red"> Please DO NOT purchase one of these items unless you are using your own server that you installed.</span></p>
                     </div>
                 </div>
             </div>
