--- a/src/premiere.html
+++ b/src/premiere.html
@@ -460,6 +460,8 @@
                         <h1>Emby Premiere</h1>
                         <p>Enjoy additional features to enhance your personal media experience.</p>
                         <p style="font-weight: bold">Emby is NOT a media streaming service.  We provide no content.  Emby is a Personal Media Server platform.  You must have your own server installed and your own media (or Live TV tuner).<span style="color:red"> Please DO NOT purchase one of these items unless you are using your own server that you installed.</span></p>
+
+                        <h2 style="font-weight: bold; color: red">Cyber Weekend Sale!  Premiere Lifetime only $99</h2>
                     </div>
                 </div>
             </div>
@@ -560,12 +562,11 @@
                                     </div> <!-- header -->
                                     <div class="aio-icon-description" style="">
                                         <p>
-                                            $119/One-time<br>
-                                        </p>
+                                            <span style="text-decoration: line-through;">$119</span> <span style="color: red">$99</span>/One-time<br>                                        </p>
                                         <div class="vc_wp_text wpb_content_element">
                                             <div class="widget widget_text">
                                                 <div class="textwidget">
-                                                    <button class="stripeButton" onclick="stripeCheckout('price_1JjTCXBCVt2QGDKHUZQZ86EI', 'payment')">Pay with card / Other</button>
+                                                    <button class="stripeButton" onclick="stripeCheckout('price_1JjTCXBCVt2QGDKHHH8riRo0', 'payment')">Pay with card / Other</button>
                                                     <p>
                                                         <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=3GKHZLX4B9E32"><img src="resources/checkout-logo-medium.png" alt="Check out with PayPal"></a>
                                                     </p>
@@ -921,11 +922,10 @@
                                         </div>
                                     </div><div class="aio-icon-header"><h3 class="aio-icon-title" style="">Lifetime</h3></div> <!-- header --><div class="aio-icon-description" style="">
                                         <p>
-                                            $119/One-time<br>
+                                            <span style="text-decoration: line-through;">$119</span> <span style="color: red">$99</span>/One-time<br>
                                         </p><div class="vc_wp_text wpb_content_element">
                                             <div class="widget widget_text">
-                                                <button class="stripeButton" onclick="stripeCheckout('price_1JjTCXBCVt2QGDKHUZQZ86EI', 'payment')">Pay with card / Other</button>
-                                                <div class="textwidget">
+                                                    <button class="stripeButton" onclick="stripeCheckout('price_1JjTCXBCVt2QGDKHHH8riRo0', 'payment')">Pay with card / Other</button>                                                <div class="textwidget">
                                                     <p><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=3GKHZLX4B9E32"><img src="resources/checkout-logo-medium.png" alt="Check out with PayPal"></a></p>
                                                 </div>
                                             </div>
