--- a/src/mac-server.html
+++ b/src/mac-server.html
@@ -3,8 +3,8 @@
 <head itemscope itemtype="https://schema.org/Article">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta charset="UTF-8">
-    <title>Emby Server for Mac - Emby</title>
-    <meta name="description" content="Emby Server for Apple Mac OSX - Organize and stream your personal videos, music, photos and Live TV to any device.">
+    <title>Emby Server for macOS - Emby</title>
+    <meta name="description" content="Emby Server for Apple macOS - Organize and stream your personal videos, music, photos and Live TV to any device.">
     {SOCIALNETWORKS}
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link rel="stylesheet" id="rs-plugin-settings-css" href="resources/settings.css" type="text/css" media="all">
@@ -398,7 +398,7 @@
             <div class="l-submain for_pagehead color_alternate size_large" style="padding-top: 140px;">
                 <div class="l-submain-h g-html i-cf">
                     <div class="w-pagehead">
-                        <h1>Emby Server for Mac</h1>
+                        <h1>Emby Server for macOS</h1>
                     </div>
                 </div>
             </div>
