--- a/src/freebsd-server.html
+++ b/src/freebsd-server.html
@@ -440,7 +440,7 @@
 
                                 <p>First, make sure your FreeBSD system is <b>configured for latest packages</b>.</p>
                                 <div><b>Install dependencies:</b></div>
-                                <div><code>sudo pkg install libass fontconfig freetype2 mbedtls fribidi gnutls iconv opus sqlite3 libtheora libva ocl-icd libvorbis webp libzvbi libraw ImageMagick6 tesseract intel-media-sdk libunwind libinotify openssl icu krb5 libexif libjxl libheif libimagequant openexr openjpeg orc pango tiff</code></div>
+                                <div><code>sudo pkg install dotnet libass fontconfig freetype2 mbedtls fribidi gnutls iconv opus sqlite3 libtheora libva ocl-icd libvorbis webp libzvbi libraw ImageMagick6 tesseract intel-media-sdk libunwind libinotify openssl icu krb5 libexif libjxl libheif libimagequant openexr openjpeg orc pango tiff</code></div>
 
                                 <br />
                                 <div>
@@ -450,20 +450,14 @@
                                 </div>
 
                                 <br />
+                                <div><b>Install Emby Server on FreeBSD 14:</b></div>
+                                <div><code style="white-space:nowrap;" class="lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-freebsd14_{version}_amd64.pkg">pkg add -f {url}</code></div>
+                                <div style="margin:.5em 0;"><code style="white-space:nowrap;">sysrc emby_server_enable="YES"</code></div>
+                                <div style="margin:.5em 0;"><code style="white-space:nowrap;">service emby-server start</code></div>
+
+                                <br />
                                 <div><b>Install Emby Server on FreeBSD 13:</b></div>
                                 <div><code style="white-space:nowrap;" class="lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-freebsd13_{version}_amd64.pkg">pkg add -f {url}</code></div>
-                                <div style="margin:.5em 0;"><code style="white-space:nowrap;">sysrc emby_server_enable="YES"</code></div>
-                                <div style="margin:.5em 0;"><code style="white-space:nowrap;">service emby-server start</code></div>
-
-                                <br />
-                                <div><b>Install Emby Server on FreeBSD 12:</b></div>
-                                <div><code style="white-space:nowrap;" class="lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-freebsd12_{version}_amd64.pkg">pkg add -f {url}</code></div>
-                                <div style="margin:.5em 0;"><code style="white-space:nowrap;">sysrc emby_server_enable="YES"</code></div>
-                                <div style="margin:.5em 0;"><code style="white-space:nowrap;">service emby-server start</code></div>
-
-                                <br />
-                                <div><b>Install Emby Server on FreeBSD 11.2:</b></div>
-                                <div><code style="white-space:nowrap;" class="lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-freebsd11_{version}_amd64.pkg">pkg add -f {url}</code></div>
                                 <div style="margin:.5em 0;"><code style="white-space:nowrap;">sysrc emby_server_enable="YES"</code></div>
                                 <div style="margin:.5em 0;"><code style="white-space:nowrap;">service emby-server start</code></div>
 
