--- a/src/index.html
+++ b/src/index.html
@@ -619,10 +619,10 @@
                                         <div class="w-tabs-section-content-h i-cf">
                                             <div class="wpb_text_column ">
                                                 <div class="wpb_wrapper">
-                                                    <p>Take your home videos, music, and photos with you wherever you go, even offline with Emby Mobile Sync. Emby mobile apps are available for Android, iPhone, iPad, Windows Phone and Windows Tablets.</p>
-                                                    <p>
-                                                        Or sit back and enjoy Emby from the living room. Emby apps are available for Android TV, Amazon Fire TV, Chromecast, Roku, Xbox, Home Theater Computers, and more.
-                                                    </p>
+                                                    <p>Enjoy Emby from anywhere! Sit back and enjoy Emby on your TV. Apps for your TV are available for Android TV, Apple TV, Google TV, Amazon Fire TV, Roku, LG Smart TV, Samsung Smart TV and more. </p>
+                                                    <p>Maybe you want to enjoy Emby on the go? You can use Emby on Android, iPhone, iPad, Android Auto, Apple CarPlay. </p>
+                                                    <p>Sometimes you want to access all of your media on your computer and Emby has you covered there as well. With apps for Windows, MacOS, Linux, browsers and more.</p>
+                                                    <p>Emby truly allows you to access your media your way! You can view all of our apps on our <a href="download.html">download page</a>.</p>
                                                 </div>
                                             </div>
                                         </div>
